...
                        fontSizeText: 20,
                        fontWeight: fontLight,
                        paddingBot: 20,
                        color: navy,
                      ),
                      GestureDetector(
                        key: const Key("add_image_button"),
                        onTap: () {
                          showModalBottomSheet<void>(
                            context: context,
                            builder: (BuildContext context) {
                              return SizedBox(
                                height: 150,
...
                                              Padding(
                                                padding: const EdgeInsets.only(
                                                  bottom: 10,
                                                ),
                                                child: InkWell(
                                                  key: const Key(
                                                      "camera_button"),
                                                  onTap: () async {
                                                    await availableCameras()
                                                        .then(
                                                      (
                                                        List<CameraDescription>
                                                            value,
...
                            child: ConstrainedBox(
                              constraints: const BoxConstraints(maxWidth: 500),
                              child: TextInput(
                                value: name,
                                placeholder: "Nom",
                                onChangeText: _onNameChange,
                                keyTest: "add_vehicule_input_name",
                              ),
                            ),
                          ),
                        )
                      else
                        Padding(
...
                            child: ConstrainedBox(
                              constraints: const BoxConstraints(maxWidth: 500),
                              child: TextInput(
                                value: kilometer,
                                placeholder: "Kilométrage (en km)",
                                onChangeText: _onKMChange,
                                keyTest: "add_vehicule_input_km",
                              ),
                            ),
                          ),
                        )
                      else
                        Padding(
...
                                      right: 16,
                                      top: 2,
                                    ),
                                    child: Center(
                                      child: TextField(
                                        key: const Key(
                                            "add_vehicule_input_date"),
                                        controller: dateinput,
                                        decoration: const InputDecoration(
                                          border: InputBorder.none,
                                          iconColor: navy,
                                          icon: Icon(Icons.calendar_today),
                                          labelText: "Date d'achat",
...
                                  ],
                                ),
                                child: Button(
                                  text: "Ajouter véhicule",
                                  onPress: _onAddVehicule,
                                  isLoading: isLoadedVehicule,
                                  keyTest: "add_vehicule_button",
                                ),
                              ),
                            ),
                          ),
                        )
                      else
...
