...
                                  padding:
                                      const EdgeInsets.only(top: 8, bottom: 24),
                                  child: TextInput(
                                    value: firstname,
                                    placeholder: "Prénom",
                                    onChangeText: _onFirstnameChange,
                                    keyTest: "sign_up_input_first_name",
                                  ),
                                ),
                                const Align(
                                  alignment: Alignment.topLeft,
                                  child: Text(
                                    "Nom",
...
                                  padding:
                                      const EdgeInsets.only(top: 8, bottom: 24),
                                  child: TextInput(
                                    value: lastname,
                                    placeholder: "Nom",
                                    onChangeText: _onLastnameChange,
                                    keyTest: "sign_up_input_last_name",
                                  ),
                                ),
                                const Align(
                                  alignment: Alignment.topLeft,
                                  child: Text(
                                    "Email",
...
                                  padding:
                                      const EdgeInsets.only(top: 8, bottom: 24),
                                  child: TextInput(
                                    value: email,
                                    placeholder: "Adresse Email",
                                    onChangeText: _onEmailChange,
                                    keyTest: "sign_up_input_email",
                                  ),
                                ),
                                const Align(
                                  alignment: Alignment.topLeft,
                                  child: Text(
                                    "Mot de passe",
...
                                      const EdgeInsets.only(top: 8, bottom: 16),
                                  child: TextInput(
                                    value: password,
                                    placeholder: "Mot de passe",
                                    onChangeText: _onPasswordChange,
                                    secure: true,
                                    keyTest: "sign_up_input_pw",
                                  ),
                                ),
                                Padding(
                                  padding:
                                      const EdgeInsets.only(top: 8, bottom: 16),
                                  child: Text(
...
                                Padding(
                                  padding: const EdgeInsets.only(top: 32),
                                  child: Button(
                                    text: "S'inscrire",
                                    onPress: _registerPress,
                                    isLoading: isLoading,
                                    keyTest: "sign_up_button",
                                  ),
                                )
                              ],
                            ),
                          ),
                        )
...
